docs/v2/github.com/solo-io/gloo/projects/gloo/api/v1/load_balancer.proto.sk.md

---
title: "load_balancer.proto"
weight: 5
---

<!-- Code generated by solo-kit. DO NOT EDIT. -->


### Package: `gloo.solo.io` 
#### Types:


- [LoadBalancerConfig](#loadbalancerconfig)
- [RoundRobin](#roundrobin)
- [LeastRequest](#leastrequest)
- [Random](#random)
- [RingHashConfig](#ringhashconfig)
- [RingHash](#ringhash)
- [Maglev](#maglev)
  



##### Source File: [github.com/solo-io/gloo/projects/gloo/api/v1/load_balancer.proto](https://github.com/solo-io/gloo/blob/master/projects/gloo/api/v1/load_balancer.proto)





---
### LoadBalancerConfig

 
LoadBalancerConfig is the settings for the load balancer used to send request to the Upstream 
endpoints.

```yaml
"healthyPanicThreshold": .google.protobuf.DoubleValue
"updateMergeWindow": .google.protobuf.Duration
"roundRobin": .gloo.solo.io.LoadBalancerConfig.RoundRobin
"leastRequest": .gloo.solo.io.LoadBalancerConfig.LeastRequest
"random": .gloo.solo.io.LoadBalancerConfig.Random
"ringHash": .gloo.solo.io.LoadBalancerConfig.RingHash
"maglev": .gloo.solo.io.LoadBalancerConfig.Maglev

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `healthyPanicThreshold` | [.google.protobuf.DoubleValue](https://developers.google.com/protocol-buffers/docs/reference/csharp/class/google/protobuf/well-known-types/double-value) | Configures envoy's panic threshold Percent between 0-100. Once the number of non health hosts reaches this percentage, envoy disregards health information. see more info [here](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/load_balancing/panic_threshold#arch-overview-load-balancing-panic-threshold). |  |
| `updateMergeWindow` | [.google.protobuf.Duration](https://developers.google.com/protocol-buffers/docs/reference/csharp/class/google/protobuf/well-known-types/duration) | This allows batch updates of endpoints health/weight/metadata that happen during a time window. this help lower cpu usage when endpoint change rate is high. defaults to 1 second. Set to 0 to disable and have changes applied immediately. |  |
| `roundRobin` | [.gloo.solo.io.LoadBalancerConfig.RoundRobin](../load_balancer.proto.sk#roundrobin) | Use round robin for load balancing. |  |
| `leastRequest` | [.gloo.solo.io.LoadBalancerConfig.LeastRequest](../load_balancer.proto.sk#leastrequest) | Use least request for load balancing. |  |
| `random` | [.gloo.solo.io.LoadBalancerConfig.Random](../load_balancer.proto.sk#random) | Use random for load balancing. |  |
| `ringHash` | [.gloo.solo.io.LoadBalancerConfig.RingHash](../load_balancer.proto.sk#ringhash) | Use ring hash for load balancing. |  |
| `maglev` | [.gloo.solo.io.LoadBalancerConfig.Maglev](../load_balancer.proto.sk#maglev) | Use maglev for load balancing. |  |




---
### RoundRobin



```yaml

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 




---
### LeastRequest



```yaml
"choiceCount": int

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `choiceCount` | `int` | How many choices to take into account. defaults to 2. |  |




---
### Random



```yaml

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 




---
### RingHashConfig

 
Customizes the parameters used in the hashing algorithm to refine performance or resource usage.

```yaml
"minimumRingSize": int
"maximumRingSize": int
"defaultHashPolicy": .lbhash.plugins.gloo.solo.io.RouteActionHashConfig

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `minimumRingSize` | `int` | Minimum hash ring size. The larger the ring is (that is, the more hashes there are for each provided host) the better the request distribution will reflect the desired weights. Defaults to 1024 entries, and limited to 8M entries. |  |
| `maximumRingSize` | `int` | Maximum hash ring size. Defaults to 8M entries, and limited to 8M entries, but can be lowered to further constrain resource use. |  |
| `defaultHashPolicy` | [.lbhash.plugins.gloo.solo.io.RouteActionHashConfig](../plugins/lbhash/lbhash.proto.sk#routeactionhashconfig) | Optional, if set, routes to this upstream will use this hash policy, unless a policy has been set on the route Gloo configures Envoy with the first available RouteActionHashConfig among the following ordered list of providers: - route, upstream, virtual service |  |




---
### RingHash



```yaml
"ringHashConfig": .gloo.solo.io.LoadBalancerConfig.RingHashConfig

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `ringHashConfig` | [.gloo.solo.io.LoadBalancerConfig.RingHashConfig](../load_balancer.proto.sk#ringhashconfig) | Optional, customizes the parameters used in the hashing algorithm |  |




---
### Maglev



```yaml
"ringHashConfig": .gloo.solo.io.LoadBalancerConfig.RingHashConfig

```

| Field | Type | Description | Default |
| ----- | ---- | ----------- |----------- | 
| `ringHashConfig` | [.gloo.solo.io.LoadBalancerConfig.RingHashConfig](../load_balancer.proto.sk#ringhashconfig) | Optional, customizes the parameters used in the hashing algorithm |  |





<!-- Start of HubSpot Embed Code -->
<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5130874.js"></script>
<!-- End of HubSpot Embed Code -->
